--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,228 @@
-body{
-    background-color: #fff;
-    color: #2a2a2a;
+body {
+  background-color: #fff;
+  color: #2a2a2a;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.link:hover,
+.link:focus {
+  color: #2196f3;
+}
+
+ul {
+  list-style: none;
+}
+
+/* Шапка сайта */
+.logo {
+  color: #2196f3;
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+}
+
+.logo-dark {
+  color: #000000;
+}
+
+.logo-white {
+  color: #ffffff;
+}
+
+.shadow {
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.menu {
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.active {
+  color: #2196f3;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.contacts-link {
+  font-family: "Roboto";
+  font-weight: 500;
+  line-height: 1.14px;
+  letter-spacing: 0.02em;
+  color: inherit;
+}
+
+/* Главная страница */
+.hero {
+  background-color: #2f303a;
+}
+
+.hero-header {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: #ffffff;
+  /* border: 1px solid #000000; */
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.btn {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  /* display: flex; */
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background-color: #2196f3;
+  border: none;
+  width: 200px;
+  height: 50px;
+  left: 700px;
+  top: 430px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.btn:hover,
+.btn:focus {
+  background-color: #188ce8;
+}
+
+/* Блок наши преимущества */
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
+.benefits-list {
+  font-weight: 700;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: #212121;
+}
+
+/* Блок услуги */
+.services-header {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  color: #212121;
+}
+
+/* Блок наша команда */
+.team {
+  background-color: #f5f4fa;
+}
+
+.team-list {
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  width: 270px;
+height: 368px;
+}
+
+.team-leader {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  color: #212121;
+}
+
+.team-profesion {
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+}
+
+/* Подвал сайта*/
+.footer {
+  background-color: #2f303a;
+}
+
+.adress {
+  font-style: inherit;
+  color: #ffffff;
+}
+
+
+/* Стили второй вкладки ПОРТФОЛИО */
+/* Галерея*/
+.filters-list {
+    /* стили к кнопке */
+    /* position: absolute; */
+    width: 103px;
+    height: 38px;
+    left: 865px;
+    top: 174px;
+    background-color: #F5F4FA;
+    border-radius: 4px;
+    border: none;
+/* стили к тексту кнопки */
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.63;
+    text-align: center;
+    color: #212121;
+}
+
+.filters-list:hover, .filters-list:focus, .filters-active{
+    color: #FFFFFF;
+background-color: #2196F3;
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+0px 1px 2px rgba(0, 0, 0, 0.08),
+0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.projects-list {
+    background: #FFFFFF;
+    border: 1px solid #EEEEEE;
+    box-sizing: border-box;
+    width: 370px;
+    height: 404px;
+}
+
+.projects-name {
+
+}
+
+.projects-name {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+        color: #212121;
+        text-decoration: none;
+}
+
+.projects-view {
+    font-size: 16px;
+    line-height: 1.88;
+    text-decoration: none;
 }
