--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ ul {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   width: 270px;
-height: 368px;
+  height: 368px;
 }
 
 .team-leader {
@@ -161,68 +161,71 @@ height: 368px;
   text-align: center;
 }
 
-/* Подвал сайта*/
-.footer {
-  background-color: #2f303a;
-}
-
-.adress {
-  font-style: inherit;
-  color: #ffffff;
-}
-
-
 /* Стили второй вкладки ПОРТФОЛИО */
 /* Галерея*/
 .filters-list {
-    /* стили к кнопке */
-    /* position: absolute; */
-    width: 103px;
-    height: 38px;
-    left: 865px;
-    top: 174px;
-    background-color: #F5F4FA;
-    border-radius: 4px;
-    border: none;
-/* стили к тексту кнопки */
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.63;
-    text-align: center;
-    color: #212121;
+  /* стили к кнопке */
+  /* position: absolute; */
+  width: 103px;
+  height: 38px;
+  left: 865px;
+  top: 174px;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  border: none;
+  /* стили к тексту кнопки */
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  color: #212121;
 }
 
-.filters-list:hover, .filters-list:focus, .filters-active{
-    color: #FFFFFF;
-background-color: #2196F3;
-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-0px 1px 2px rgba(0, 0, 0, 0.08),
-0px 2px 2px rgba(0, 0, 0, 0.12);
+.filters-list:hover,
+.filters-list:focus,
+.filters-active {
+  color: #ffffff;
+  background-color: #2196f3;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .projects-list {
-    background: #FFFFFF;
-    border: 1px solid #EEEEEE;
-    box-sizing: border-box;
-    width: 370px;
-    height: 404px;
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+  width: 370px;
+  height: 404px;
 }
 
 .projects-name {
-
-}
-
-.projects-name {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-        color: #212121;
-        text-decoration: none;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: #212121;
 }
 
 .projects-view {
-    font-size: 16px;
-    line-height: 1.88;
+  font-size: 16px;
+  line-height: 1.88;
+}
+
+.projects-link {
+    color: inherit;
     text-decoration: none;
+}
+
+/* Подвал сайта*/
+.footer {
+    background-color: #2f303a;
+}
+
+.adress {
+    font-style: inherit;
+    color: #ffffff;
+}
+
+.contacts-footer {
+color: rgba(255, 255, 255, 0.6);
 }
