Добавила стиль на курсор для кнопки

--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,7 @@ ul {
   top: 430px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  cursor: pointer;
 }
 
 .btn:hover,
@@ -173,6 +174,7 @@ ul {
   background-color: #f5f4fa;
   border-radius: 4px;
   border: none;
+  cursor: pointer;
   /* стили к тексту кнопки */
   font-weight: 500;
   font-size: 16px;
