--- a/css/style.css
+++ b/css/style.css
@@ -38,10 +38,6 @@ ul {
   color: #ffffff;
 }
 
-.shadow {
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
 .menu {
   font-weight: 500;
   line-height: 1.14;
@@ -51,7 +47,6 @@ ul {
 
 .active {
   color: #2196f3;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .contacts-link {
@@ -119,6 +114,7 @@ ul {
 }
 
 .benefits-list {
+  font-size: inherit;
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
